| Summary: | ASTERISK-30106: res_calendar_icalendar: Microsoft online ICS calendars no longer work | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-06-12 08:05:04 | Date Closed: | 2022-06-30 18:32:57 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_calendar_icalendar |
| Versions: | 18.12.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A few days ago, outlook.com shared ICS calendars seemed to stop working, for no apparent reason.
Every 10 minutes, I get these warnings in the CLI: {noformat} [Jun 12 08:54:39] WARNING[564844]: res_calendar_icalendar.c:151 fetch_icalendar: Unable to retrieve iCalendar 'REDACTED' from 'https://REDACTED/calendar.ics': 400 [Jun 12 08:54:39] WARNING[564844]: res_calendar_icalendar.c:478 ical_load_calendar: Unable to parse iCalendar 'REDACTED' [Jun 12 08:54:39] ERROR[564844]: res_calendar_icalendar.c:366 icalendar_update_events: The iCalendar has not been parsed! [Jun 12 08:54:39] WARNING[564842]: res_calendar_icalendar.c:151 fetch_icalendar: Unable to retrieve iCalendar 'REDACTED' from 'https://REDACTED/calendar.ics': 400 [Jun 12 08:54:39] WARNING[564842]: res_calendar_icalendar.c:478 ical_load_calendar: Unable to parse iCalendar 'REDACTED' [Jun 12 08:54:39] ERROR[564842]: res_calendar_icalendar.c:366 icalendar_update_events: The iCalendar has not been parsed! [Jun 12 08:54:39] WARNING[564843]: res_calendar_icalendar.c:151 fetch_icalendar: Unable to retrieve iCalendar 'REDACTED' from 'https://REDACTED/calendar.ics': 400 [Jun 12 08:54:39] WARNING[564843]: res_calendar_icalendar.c:478 ical_load_calendar: Unable to parse iCalendar 'REDACTED' [Jun 12 08:54:39] ERROR[564843]: res_calendar_icalendar.c:366 icalendar_update_events: The iCalendar has not been parsed! {noformat} As a result, calendaring has completely broken in Asterisk for me. Importantly: - This happens with all calendars for Outlook.com, and in multiple Microsoft accounts, so it's not an account issue. - Other ICS links work fine without triggering these warnings - Outlook.com shared ICS calendars work fine in other calendaring programs, e.g. mail clients So the problem is both specific to the Office 365 ICS format as well as Asterisk since both are required to trigger the problem. Even if Microsoft changed something, it seems to work fine in other applications so there seems to be some lack of support given the 400 Bad Request errors. Tested with both Debian 10 and Debian 11, and Asterisk 18.9 and Asterisk 18.12. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-06-12 08:05:05.827-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: N A (InterLinked) 2022-06-20 15:08:09.797-0500 It's also worth noting that apparently Basic authentication was discontinued by Microsoft on October 13, 2020: https://techcommunity.microsoft.com/t5/exchange-team-blog/upcoming-changes-to-exchange-web-services-ews-api-for-office-365/ba-p/608055 It seems that res_calendar_ews only supports basic authentication and not OAuth, so I believe that means res_calendar_ews is completely unusable at this point. I don't agree with Microsoft or other vendors phasing out basic auth, but if that's the reality, these applications either need to be updated to follow suit or... deprecated, which wouldn't be ideal either. So, on-prem Exchange connections would still work I imagine but I think users with Microsoft accounts may be SOL at the moment... By: Friendly Automation (friendly-automation) 2022-06-30 18:32:58.215-0500 Change 18687 merged by Friendly Automation: res_calendar_icalendar: Send user agent in request. [https://gerrit.asterisk.org/c/asterisk/+/18687|https://gerrit.asterisk.org/c/asterisk/+/18687] By: Friendly Automation (friendly-automation) 2022-07-01 09:57:27.270-0500 Change 18678 merged by Kevin Harwell: res_calendar_icalendar: Send user agent in request. [https://gerrit.asterisk.org/c/asterisk/+/18678|https://gerrit.asterisk.org/c/asterisk/+/18678] By: Friendly Automation (friendly-automation) 2022-07-01 09:58:31.200-0500 Change 18679 merged by Kevin Harwell: res_calendar_icalendar: Send user agent in request. [https://gerrit.asterisk.org/c/asterisk/+/18679|https://gerrit.asterisk.org/c/asterisk/+/18679] By: Friendly Automation (friendly-automation) 2022-07-01 10:09:11.463-0500 Change 18700 merged by Kevin Harwell: res_calendar_icalendar: Send user agent in request. [https://gerrit.asterisk.org/c/asterisk/+/18700|https://gerrit.asterisk.org/c/asterisk/+/18700] | ||